--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,21 @@ jobs:
             pip install --requirement requirements.txt
             pip install --requirement dev_requirements.txt
             ./build
+  e2e:
+    docker:
+      - image: circleci/python:3.7.3
+    steps:
+      - checkout
+      - run:
+          name: Install requirements and run e2e scripts
+          command: |
+            mkdir -p ./venv
+            virtualenv --python python3 ./venv
+            . venv/bin/activate
+            pip install --requirement requirements.txt
+            ./e2e/test-csv-to-yaml
 workflows:
   test:
     jobs:
       - build
+      - e2e
