Adding e2e test for render_scenes.py (#9)
* Adding e2e test for render_scenes.py

* Adding sort flag and ffmpeg install

* Adding requirements to README

* Adding apt-get update

* Fixing e2e test

* Fixing ls output

* Fixing newline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,9 @@ jobs:
             . venv/bin/activate
             pip install --requirement requirements.txt
             ./e2e/test-csv-to-yaml
+            sudo apt-get update
+            sudo apt-get install ffmpeg --yes
+            ./e2e/test-render-scenes
 workflows:
   test:
     jobs:
