--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install \
               ffmpeg \
+              python3 \
               python3-venv \
               --yes
             python3 -m venv ./venv
