--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
               python3 \
               python3-venv \
               --yes
+            python3 --version
             python3 -m venv ./venv
             . venv/bin/activate
             pip install --requirement requirements.txt
