--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,21 +21,7 @@ jobs:
       - checkout
       - run:
           name: Install requirements and run e2e scripts
-          command: |
-            sudo apt-get update
-            sudo apt-get install \
-              ffmpeg \
-              python3 \
-              python3-venv \
-              --yes
-            python3 --version
-            python3 -m venv ./venv
-            . venv/bin/activate
-            pip install --requirement requirements.txt
-            ./e2e/test-csv-to-yaml
-            VIDEOS_DIR=$(mktemp -d)
-            ./e2e/test-render-scenes "$VIDEOS_DIR"
-            ./e2e/test-publish-to-mediagoblin "$VIDEOS_DIR"
+          command: ./e2e/e2e.sh
 workflows:
   test:
     jobs:
